tests/snapshots/anchor_tests__anchor_definition_file_location.snap
---
source: tests/anchor_tests.rs
description: anchor definition file location
info: "[documentation]{:docs/setup:}"
---
[
  Paragraph([
    AnchorDefinition(
      content: [
        Token(Text("documentation")),
      ],
      target: Link(
        filepath: Some("docs/setup"),
        targets: [],
        description: None,
      ),
    ),
  ]),
]
